fix(sidebar-filter): increase contrast of matches (#598)
* fix(sidebar-filter): increase contrast of matches

* chore(sidebar-filter): reuse --color-background-yellow

Like in the search dialog.


* chore(sidebar-filter): use background-color, not background

---------

--- a/components/left-sidebar/server.css
+++ b/components/left-sidebar/server.css
@@ -127,7 +127,7 @@
   mark {
     /* Sidebar filter highlight */
     color: unset;
-    background-color: var(--color-background-blue);
+    background-color: var(--color-background-yellow);
   }
 }
 
